--- a/templates/buscar_A.html
+++ b/templates/buscar_A.html
@@ -5,7 +5,7 @@
     <div class="grid grid-cols-1 gap-6 p-6 md:grid-cols-1 lg:grid-cols-1 justify-items-center">
         <h1 class="text-2xl font-bold">Buscar Alumno</h1>
 
-        <form method="POST" action="{{ url_for('buscar_A') }}">
+        <form method="POST" action="{{ url_for('alumnos.buscar_A') }}">
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
             <label for="nombre" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Nombre</label>
             <input type="text" id="nombre" name="nombre"
